# claude-toolshed

./: CLAUDE.md  README.md
homework-tracker/: .env.example  README.md  package.json  tsconfig.json
homework-tracker/src/: argo.ts  checkLogin.ts  index.ts  tools.ts
meal-planner/: .gitignore  .mcp.json  README.md  pyproject.toml
meal-planner/src/mealplanner/: __init__.py  config.py  constraints.py  db.py  scrape.py  search.py  server.py  shopping.py  store.py  whatsapp.py
meal-planner/tests/: conftest.py  test_constraints.py  test_scrape.py  test_search_ranking.py  test_shopping.py  test_store.py
meal-planner/tests/fixtures/: jsonld_recipe.html  not_a_recipe.html
schoolwork-tracker/: .env.example  .gitignore  README.md  package-lock.json
schoolwork-tracker/src/: argo.ts  config.ts  redact.ts  tools.ts
scripts/: sync-to-windows.sh
shared/: README.md
